# agenda_phoenix

./: .env.example  .gitignore  CALENDARIOS_ESPECIFICACION.md  EVENTOS_RECURRENTES.txt  EVENTOS_RECURRENTES_SOLUCION.txt  MODELOS_OBSOLETOS.txt  PLAN_MIGRACION_CDC_COMPLETA.md  Q1  README.md  REDISEÑO_CONTACTOS_PROGRESS.md  REDISEÑO_CONTACTOS_RESUMEN.md  REPORTE_ENDPOINTS.txt  SUPABASE_DIRECT_ACCESS_AUDIT.md  TESTS_ARREGLADOS.txt  add_test_contacts.sh  check_todos.sh  clean.sh  datos.txt  docker-compose.yml  start.sh  start_phoenix.sh
app_flutter/: .gitignore  COMO_PROBAR_COMANDOS_DE_VOZ.md  VOICE_COMMANDS_README.md  pubspec.yaml  system_prompt.txt
backend/: BACKEND_FLUTTER_COMPATIBILITY_REPORT.md  BACKEND_FLUTTER_RECONCILIATION_REPORT_2025.md  CASOS_USO_INIT_DB_2.md  DATOS.txt  Dockerfile  FLUTTER_COMPATIBILITY_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  MODEL_INCONSISTENCIES_REPORT.md  MODEL_NAMING_INCONSISTENCIES.md  RECONCILIACION_ENDPOINTS.md  TESTS_PLAN.md  auth.py  database.py  dependencies.py  fix_test.py  init_db.py  init_db_2.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  utils.py
cli/: .gitignore  README.md  README_MENU.md  agenda.py  api_client.py  config.py  menu.py  menu_old.py  requirements.txt  start.sh  state.py  test_menu.sh  utils.py
database/: Dockerfile
docs/: ARQUITECTURA_FLUTTER.md  README.md  development-rules.md  project-overview.md
eventypop_mcp/: .dockerignore  Dockerfile  INTEGRATION.md  README.md  pyproject.toml  requirements.txt  server.py
eventypop_mcp/schemas/: operations.yaml  workflows.yaml
(+1167 files in other folders)
