[project]
name = "eventypop-mcp"
version = "0.1.0"
description = "Model Context Protocol server for EventyPop - Provides dynamic metadata about operations, API schemas, and intelligent workflows"
authors = [{name = "EventyPop Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
